--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <nav class="navbar">
                 <a href="" class="logo" id="logo">Feane</a>
                 <ul class="first-ul">
-                    <!-- <a href="" class="logo" id="logo">Feane</a> -->
                     <a href="#">HOME</a>
                     <a href="#">MENU</a>
                     <a href="#">ABOUT</a>
@@ -24,7 +23,7 @@
                     <a href="#"><img src="./assets/images/icons/user-solid.svg" alt=""></a>
                     <a href="#"><img src="./assets/images/icons/cart-shopping-solid.svg" alt=""></a>
                     <a href="#"><img src="./assets/images/icons/magnifying-glass-solid.svg" alt=""></a>
-                    <a href="#">Order Online</a>
+                    <a href="#" class="OrderOne">Order Online</a>
                 </ul>
             </nav>
         </div>
@@ -35,8 +34,7 @@
                 <div class="slide">
                     <div class="slide-img">
                         IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                        IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                        IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
+
                     </div>
                 </div>
 
@@ -44,15 +42,12 @@
             <div class="slide">
                 <div class="slide-img">
                     IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                    IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                    IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
                 </div>
             </div>
             <div class="slide">
                 <div class="slide-img">
                     IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                    IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
-                    IUEEIERRER DFHJDFH EFUIEHJE IUYEN DFKHD
+
                 </div>
             </div>
         </div>
